--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,7 +1,7 @@
 {
 "languageserver": {
   "python": {
-    "command": "/usr/bin/python",
+    "command": "/usr/bin/python3",
     "args": [
       "-mpyls",
       "-vv",
